--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 --- #YAML:1.0
 name:                Carp-Clan
-version:             6.03
+version:             6.04
 abstract:            Report errors from perspective of caller of a "clan" of modules
-license:             ~
+license:             perl
 author:              
     - Steffen Beyer <STBEY@cpan.org>
 generated_by:        ExtUtils::MakeMaker version 6.42
