Relocate Author Tests to xt/
They can be now enabled by having AUTHOR_TESTING=1 in ENV
while doing Makefile.PL

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
   - build-perl
   - perl -V
   - build-dist;
+  - source ./maint/travis/coversmoke.sh
   - cd $BUILD_DIR;
 before_script:
   - coverage-setup
